--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
-  <body class="bg-[#0e1a25]">
+  <body class="bg-indigo">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
